[gd_scene load_steps=4 format=3 uid="uid://x662v53w8a5b"]

[ext_resource type="Script" path="res://scenes/skills/gadgets/explosive_granade/explosive_grenade_skill.gd" id="1_2iu1w"]
[ext_resource type="PackedScene" uid="uid://kqmwkgye0ggl" path="res://scenes/skills/gadgets/explosive_granade/explosive_grenade.tscn" id="2_p6yhn"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6h7m8"]
radius = 500.0

[node name="ExplosiveGrenadeSkill" type="Node2D"]
script = ExtResource("1_2iu1w")
explosive_grenade = ExtResource("2_p6yhn")

[node name="DeploymentCD" type="Timer" parent="."]
autostart = true

[node name="EnemyAimBot" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyAimBot"]
shape = SubResource("CircleShape2D_6h7m8")

[connection signal="timeout" from="DeploymentCD" to="." method="_on_deployment_cd_timeout"]
